@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added new label and image alignments (STR #2269)
 	- Added documentation for event delivery (STR #1983)
 	- Fixed menu and tooltip window animation bug under X11 (compiz)
 	  by setting an appropriate window type (STR #2082)
